Added document.ready for image load waiting on the gallery page type initial load

--- a/gallery.twig
+++ b/gallery.twig
@@ -34,36 +34,43 @@
 <script src="{{asset('assets/isotape.js')}}"></script>
 <script>
 
-var featuregallery = $('#page-zones__template-widgets__gallery-featuregallery'),
-    timeout = null,
-    setuptimeout = null;
+(function ()
+{
+	// Add the niceScroll plugin to the iframe html element
+	$(document).ready(function ()
+	{
+        var featuregallery = $('#page-zones__template-widgets__gallery-featuregallery'),
+            timeout = null,
+            setuptimeout = null;
 
-function setUpGallery() {
-    featuregallery.isotope({
-        itemSelector: 'li',
-        masonry: {}
-    });
-}
-  
-featuregallery.on('prerender', function() {
-    featuregallery.isotope('destroy');
-});
+        function setUpGallery() {
+            featuregallery.isotope({
+                itemSelector: 'li',
+                masonry: {}
+            });
+        }
 
-featuregallery.on('rendered', function(){
-    clearTimeout(setuptimeout);
-    setuptimeout = setTimeout(function() {
+        featuregallery.on('prerender', function() {
+            featuregallery.isotope('destroy');
+        });
+
+        featuregallery.on('rendered', function(){
+            clearTimeout(setuptimeout);
+            setuptimeout = setTimeout(function() {
+                setUpGallery();
+            },1000);
+        });
+
+        window.addEventListener( 'resize', function() {
+            //clearTimeout(timeout);
+            //timeout = setTimeout(function() {
+                featuregallery.isotope('reLayout');
+            //},1000);
+        }, false );
+
         setUpGallery();
-    },1000);
-});
-
-window.addEventListener( 'resize', function() {
-    //clearTimeout(timeout);
-    //timeout = setTimeout(function() {
-        featuregallery.isotope('reLayout');
-    //},1000);
-}, false );
-
-setUpGallery();
+    });
+}());
 </script>
 
 {% endblock %}
