Corrected syntax error in stylesheet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1630,6 +1630,8 @@ hr.line.align-right {
   *zoom: 1;
 }
 
+
+
 #featuregallery .widget.gallery  .gallery-widget {
 	list-style: none;
 	margin: 30px auto;
@@ -1649,7 +1651,7 @@ hr.line.align-right {
 }
 
 #featuregallery .widget.gallery .title,
-#featuregallery .widget.gallery .d/escription {
+#featuregallery .widget.gallery .description {
     display:none;
 }
 
