Changed the one-to-one class to square in the gallery widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -705,7 +705,7 @@ footer span {
     background-color: @color-swatch1;
 }
 
-.widget.gallery ul li.one-to-one span.inner
+.widget.gallery ul li.square span.inner
 {
     background-size:100% 100%;
 }
