--- a/stylesheet.less
+++ b/stylesheet.less
@@ -120,8 +120,8 @@ header {
 }
 
 .widget.companyheader .company-name h1 {
-  font-size:bkscale(@font-swatch1-font-size, 0.6); /* 21.6px  */
-  line-height:bkscale(@font-swatch1-line-height, 0.8); /* 28.8px  */
+  font-size:@font-swatch1-font-size;
+  line-height:@font-swatch1-line-height;
   margin: 0;
   padding: 0;
 }
