--- a/stylesheet.less
+++ b/stylesheet.less
@@ -107,66 +107,75 @@ blockquote {
    =============================== */
 
 .main {
-  padding: 40px 0;
+  padding: 20px 0;
 }
+
+/* DEAFULT PAGE TYPES */
+
+.bk-pt-default header {
+  border-bottom: 1px solid lighten(@color-swatch5,20%);
+}
+
+.bk-pt-default .extendednavigation ul li:hover > ul {
+  border: 1px solid lighten(@color-swatch5,20%);
+  padding-top: 6px;
+}
+
+/* PAGE INTRO */
+
+.pageintro {
+  padding: 0.7em 0;
+  background-color: lighten(@color-swatch5,22%);
+}
+
+.pageintro h3 {
+  padding-bottom: 0;
+  color: @color-swatch5;
+  text-shadow: 0px 1px 0px #fff;
+}
+
 
 /* ===============================
    HEADER
    =============================== */
 
 header {
-  padding: 20px 0;
+  padding: 0;
   background-color: @color-swatch7;
 }
 
-.widget.companyheader .company-name h1 {
-  font-size:@font-swatch1-font-size;
-  line-height:@font-swatch1-line-height;
+.companyheader {
+  display: block;
+  float: left;
+  padding: 20px 0px 18px;
+}
+
+/* COMPANY NAME */
+
+.widget.companyname {
+  display: block;
+  float: left;
+  margin-top: 10px;
+}
+
+.widget.companyname h1 {
   margin: 0;
   padding: 0;
+  letter-spacing: -1px;
 }
 
-.widget.companyheader {
-  float: left;
-  overflow-x: auto;
-  overflow-y: hidden;
-  margin-top: 6px;
+.widget.companyname a:hover {
+  text-decoration: none;
 }
 
-.widget.companyheader .logo {
+/* LOGO */
+
+.widget.logo {
   display: block;
   float: left;
-  margin-right: 8px;
+  margin-right: 10px;
 }
 
-.widget.companyheader:before,
-.widget.companyheader:after {
-  content: " ";
-  display: table;
-}
-
-.widget.companyheader:after {
-  clear: both;
-}
-
-.widget.companyheader {
-  *zoom: 1;
-}
-
-.widget.companyheader .logo img {
-  max-width: 100%;
-  height: auto;
-}
-
-.widget.companyheader .logo-bottom {
-  display: none;
-}
-
-.widget.companyheader .company-name {
-  display: block;
-  float: left;
-  margin-top: 12px;
-}
 
 /* ===============================
    FOOTER
@@ -179,22 +188,47 @@ footer {
   color: @color-swatch1;
 }
 
-footer h2 {
+footer h2, footer h3, footer h4 {
   color: @color-swatch1;
-  font-size:bkscale(@font-swatch2-font-size, 0.9);
   padding-bottom: 20px;
 }
 
 footer p {
+  display: block;
   font-family: @font-swatch5-font-family;
-  color: lighten(@color-swatch5,10%);
-  line-height:@font-swatch5-line-height;
+  font-size: @font-swatch5-font-size;
+  line-height: @font-swatch5-line-height;
+  color: @font-swatch5-color;
+  max-width: 440px;
   padding-bottom: 20px;
 }
 
 footer span {
   color: @color-swatch1;
 }
+
+footer .widget.socialicons a {
+    background-size: auto;
+}
+
+footer p, footer .widget.profile span {
+  font-family: @font-swatch5-font-family;
+  color: lighten(@color-swatch5,10%);
+  line-height:@font-swatch5-line-height;
+}
+
+
+footer .widget.profile span {
+  margin-bottom: 10px;
+}
+
+/* FOOTER PROFILE STYLES */
+
+.widget.profile ul.twitter {
+    padding: 0;
+    margin: 0;
+}
+
 
 /* ===============================
    STANDARD NAVIGATION
@@ -251,12 +285,13 @@ footer span {
 .widget.extendednavigation {
   float: right;
   position: relative;
+  padding-top: 32px;
 }
 
 .widget.extendednavigation ul {
   float: left;
   padding: 0;
-  margin: 19px 0 0;
+  margin: 0;
 }
 
 /* ALIGNMENTS */
@@ -279,7 +314,6 @@ footer span {
   float: left;
   display: block;
   margin-left: 40px;
-  text-align: left;
 }
 
 .widget.extendednavigation ul li:first-child {
@@ -355,9 +389,6 @@ footer span {
   margin-left: 0;
 }
 
-.widget.extendednavigation li:hover > ul li:first-child {
-}
-
 .widget.extendednavigation li:hover > ul li:hover {
   border-bottom: 0;
 }
@@ -366,7 +397,7 @@ footer span {
   display: block;
   background-image: none;
   color: @color-swatch5;
-  padding: 14px;
+  padding: 8px 14px;
   margin-left: 0;
 }
 
@@ -378,6 +409,42 @@ footer span {
   border-bottom: 0;
   padding-bottom: 0;
   color: @color-swatch3;
+}
+
+/* EXTENDED NAVIGATION - INSIDE ZONE */
+
+.main .widget.extendednavigation {
+  padding: 20px 0;
+}
+
+.main .widget.extendednavigation {
+  max-width: 100%;
+  width: 100%;
+  float: none;
+}
+
+.main .widget.extendednavigation ul li a:hover {
+  border-bottom: 0;
+}
+
+.main .widget.extendednavigation ul li:hover > ul {
+  padding-top: 16px;
+}
+
+.main .widget.extendednavigation ul li:hover > ul li {
+  text-align: left;
+}
+
+.main .widget.extendednavigation:before,
+.main .widget.extendednavigation:after {
+  content: " ";
+  display: table;
+}
+.main .widget.extendednavigation:after {
+  clear: both;
+}
+.main .widget.extendednavigation {
+  *zoom: 1;
 }
 
 /* ===============================
@@ -526,12 +593,57 @@ footer span {
 }
 
 /* ===============================
-   CLICK TO CALL - DOESN'T SHOW IN DESKTOP
+   CLICK TO CALL WIDGET
    =============================== */
 
-  .widget.clicktocall {
-     display:none;
-   }
+.widget.clicktocall {
+   padding: 12px 0;
+}
+
+.widget.clicktocall a {
+  
+  font-family: @font-swatch5-font-family;
+  font-weight:@font-swatch5-font-weight;
+  color: @font-swatch5-color;
+  letter-spacing: @font-swatch5-letter-spacing;
+  font-size: @font-swatch5-font-size;
+  text-decoration: none;
+}
+
+.widget.clicktocall a:hover {
+  cursor: pointer;
+}
+
+
+/* CLICK TO CALL - JUSTIFY */
+
+.widget.clicktocall a.justifyleft
+{
+    text-align: left;
+}
+
+.widget.clicktocall a.justifycenter
+{
+    text-align: center;
+}
+
+.widget.clicktocall a.justifyright
+{
+    text-align: right;
+}
+
+.widget.clicktocall a.justifyfull
+{
+    text-align: justify;
+}
+
+.widget.clicktocall a.italic {
+    font-style: italic;
+}
+
+.widget.clicktocall a.bold {
+    font-weight: bold;
+}
 
 /* ===============================
    BUTTON CSS
@@ -544,7 +656,7 @@ footer span {
 .widget.button button
 {
   padding: 5px 8px;
-  margin: 1em auto;
+  margin: 0;
   border: 0;
   -webkit-border-radius: 2px;
      -moz-border-radius: 2px;
@@ -686,7 +798,7 @@ footer span {
    GALLERY WIDGET
    =============================== */
 
-/*.widget.gallery
+.widget.gallery
 {
 }
 
@@ -700,14 +812,18 @@ footer span {
 .widget.gallery li {
     float: left;
     position: relative;
-    width: 25%;
-    padding-bottom: 25%;
+    width: 33.3%;
+    padding-bottom: 33%;
 }
 
-.widget.gallery li  span.inner{
+.widget.gallery li  span.inner {
     background-position:center center;
     background-repeat:no-repeat;
     background-color: @color-swatch1;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
 }
 
 .widget.gallery ul li.one-to-one span.inner
@@ -729,8 +845,8 @@ footer span {
     position: absolute;
     left: 5px;
     right: 5px;
-    top: 5px;
-    bottom: 5px;
+    top: 0px;
+    bottom: 16px;
     overflow: hidden;
 }
 
@@ -750,11 +866,11 @@ footer span {
   *zoom: 1;
 }
 
-.widget.gallery li span.inner .title {
+.widget.gallery li span.inner .title, .widget.gallery li span.inner .description {
     position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
+    bottom: 0px;
+    left: 0px;
+    right: 0px;
     margin-bottom: -50px;
     background:@color-swatch1;
     background: rgba(0, 0, 0, 0.5);
@@ -776,15 +892,23 @@ footer span {
 }
 
 .widget.gallery li span.inner .description {
-    display:none;
-}*/
+  display: none;
+}
+
+.widget.gallery li span.inner a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
 
 /* ===============================
    DIVIDER WIDGET
    =============================== */
 
 .widget.line {
-    padding: 20px 0;
+    padding: 10px 0 20px;
 }
 
 hr.line {
@@ -806,73 +930,6 @@ hr.line.align-right {
    margin: 20px 0px 20px auto;
 }
 
-
-/* ===============================
-   CLICK TO CALL WIDGET
-   =============================== */
-
-.widget.clicktocall {
-    padding: 10px 0;
-}
-
-.widget.clicktocall a {
-  margin: 0;
-  background-image: image('/images/ic-desktop-call.png');
-  background-position: left center;
-  background-repeat: no-repeat;
-  padding-left: 28px;
-  font-family:@font-swatch4-font-family;
-  font-size:@font-swatch5-font-size;
-  font-weight: @font-swatch4-font-weight;
-  line-height: @font-swatch4-line-height;
-  color:@font-swatch4-color;
-
-  font-family: @font-swatch2-font-family;
-  font-size:1.1em;
-  font-weight:@font-swatch7-font-weight;
-  background-color: @color-swatch3;
-  color: @color-swatch1;
-  text-decoration: none;
-  letter-spacing: 1px;
-  text-shadow: 0 1px 0px rgba(0,0,0,0.3);
-}
-
-.widget.clicktocall a:hover {
-    background-image: image('/images/ic-desktop-call-hov.png');
-    background-position: left center;
-    background-repeat: no-repeat;
-    padding-left: 28px;
-    cursor: pointer;
-    text-decoration: none;
-}
-
-.widget.clicktocall a.justifyleft
-{
-    text-align: left;
-}
-
-.widget.clicktocall a.justifycenter
-{
-    text-align: center;
-}
-
-.widget.clicktocall a.justifyright
-{
-    text-align: right;
-}
-
-.widget.clicktocall a.justifyfull
-{
-    text-align: justify;
-}
-
-.widget.clicktocall a.italic {
-    font-style: italic;
-}
-
-.widget.clicktocall a.bold {
-    font-weight: bold;
-}
 
 /* ===============================
    REDIRECT WIDGET
@@ -1065,7 +1122,7 @@ hr.line.align-right {
    =============================== */
 
 .widget.tweet {
-   padding: 14px 0; 
+   padding: 8px 0; 
 }
 
 .widget.tweet a {
@@ -1108,16 +1165,23 @@ hr.line.align-right {
    =============================== */
 
 .widget.socialicons {
-    padding: 0px;
-    font-size:1em;
+    padding: 6px 0;
+    font-size: 12px;
     font-family:@font-swatch7-font-family;
 }
 
 .widget.socialicons a {
+    background-size: 30px;
+    background-color: lighten(@color-swatch4,2%);
+    background-position: center center;
     text-decoration: none;
     text-indent: -9999px;
     height: 32px;
     width: 32px;
+    margin-bottom: 6px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    border-radius: 30px;
 }
 
 .widget.socialicons span a {
@@ -1148,11 +1212,112 @@ hr.line.align-right {
 .widget.socialicons span.bk-socialicons-youtube a {
     background-image: image('/images/socialicons-youtube.png');
 }
+
+
+/* ===============================
+   PROFILE WIDGET
+   =============================== */
+
+.widget.profile span {
+  display: block;
+  font-family: @font-swatch5-font-family;
+  font-size: @font-swatch5-font-size;
+  line-height: @font-swatch5-line-height;
+  color: @font-swatch5-color;
+}
+
+
+/* ===============================
+   MAP WIDGET
+   =============================== */
+
+.widget.map  {
+  margin: 0px;
+  padding: 20px;
+  background-color: lighten(@color-swatch5,22%);
+}
+
+.widget.map .map {
+
+}
+
+
+/* ===============================
+   SIGNUP FORM WIDGET
+   =============================== */
+
+.widget.signupform {
+  padding: 0px;
+}
+
+.widget.signupform fieldset {
+  padding: 0;
+  border: 0;
+  margin: 0;
+}
+
+.widget.signupform label {
+    font-family:@font-swatch1-font-family;
+    font-size:font-swatch4-font-size;
+    font-weight:@font-swatch4-font-weight;
+    line-height:@font-swatch4-line-height;
+    color:@color-swatch4;
+    letter-spacing: @font-swatch4-letter-spacing;
+    margin-right: 10px;
+}
+
+.widget.signupform fieldset input {
+    height: 42px;
+    width: 200px;
+    background-color: lighten(@color-swatch5,22%);
+    border: 1px solid lighten(@color-swatch5,19%);
+    font-family: @font-swatch5-font-family;
+    font-size: @font-swatch5-font-size;
+    color: @font-swatch5-color;
+    text-indent: 12px;
+    -webkit-border-radius: 3px;
+     -moz-border-radius: 3px;
+          border-radius: 3px;
+}
+
+.widget.signupform fieldset input:focus {
+  outline: none;
+}
+
+.widget.signupform button {
+  margin: 0;
+  padding: 12px 18px;
+  border: 0;
+  -webkit-border-radius: 2px;
+     -moz-border-radius: 2px;
+          border-radius: 2px;
+  box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.2);
+
+  font-family: @font-swatch2-font-family;
+  font-size: 1em;
+  font-weight:@font-swatch7-font-weight;
+  background-color: @color-swatch3;
+  color: @color-swatch1;
+  text-decoration: none;
+  text-shadow: 0 1px 0px rgba(0,0,0,0.3);
+}
+
+.widget.signupform button:hover {
+  background-color: darken(@color-swatch2,5%);
+  cursor: pointer;
+  -webkit-transition: background-color 0.15s ease-in-out;
+  -moz-transition: background-color 0.15s ease-in-out;
+  -o-transition: background-color 0.15s ease-in-out;
+  transition: background-color 0.15s ease-in-out;
+}
+
+
+
 /* ===============================
    SLIDESHOW WIDGET
    =============================== */
 .widget.responsiveslideshow .slideshow-image-list {
-    height: 300px;
+    height: 450px;
 }
 
 .widget.responsiveslideshow .slideshow-widget {
@@ -1207,18 +1372,17 @@ hr.line.align-right {
     font-size: 0;
     z-index: 11;
     text-indent: -99999px;
+    height: 20%;
 }
 
 .widget.responsiveslideshow .slideshow-widget .btn-prev {
   left: 10px;
   background: image('/images/slideshow-arrow-left.png') no-repeat center left;
-  background-size: contain;
 }
 
 .widget.responsiveslideshow .slideshow-widget .btn-next {
   right: 10px;
-  background: image('/images/slideshow-arrow-right.png') no-repeat center right; 
-  background-size: contain;   
+  background: image('/images/slideshow-arrow-right.png') no-repeat center right;  
 }
 
 .widget.responsiveslideshow .slideshow-widget-controls {
@@ -1251,6 +1415,19 @@ hr.line.align-right {
     background:transparent image('/images/slideshow-dot-selected.png') center no-repeat;
 }
 
+
+/* ===============================
+   PROFILE WIDGET
+   =============================== */
+
+.widget.profile span {
+  display: block;
+  font-family: @font-swatch5-font-family;
+  font-size: @font-swatch5-font-size;
+  line-height: @font-swatch5-line-height;
+  color: @font-swatch5-color;
+}
+
 /* ===============================
    IPAD WIDTH
    =============================== */
@@ -1258,29 +1435,33 @@ hr.line.align-right {
 @media only screen and (max-width: 768px) {
 
   header {
-    padding: 5px 0;
+    padding: 15px 0;
     border-bottom: 0;
   }
 
-  .widget.companyheader {
+  header .companyheader {
     width: 100%;
     display: block;
     margin: 0 auto;
   }
 
-  .widget.companyheader .company-name {
+  .widget.companyname {
     text-align: center;
     width: 100%;
   }
 
-  .widget.companyheader .logo {
+  header .companyheader .logo {
     width: 100%;
     margin-right: 0;
   }
 
-  .widget.companyheader .logo img {
+  header .companyheader .logo img {
     display: block;
     margin: 0 auto;
+  }
+
+  footer {
+    padding: 2em 0;
   }
 
   /* NAV */
@@ -1288,7 +1469,7 @@ hr.line.align-right {
   .widget.extendednavigation {
     width: 100%;
     padding: 0;
-    margin-top: 26px;
+    margin-top: 6px;
   }
   .widget .extendednavigation {
     display: table;
@@ -1305,6 +1486,7 @@ hr.line.align-right {
   }
 
   .widget .extendednavigation li {
+    text-align: center;
     display: table-cell !important;
     float: none!important;
     padding: 0.6em;
@@ -1312,22 +1494,14 @@ hr.line.align-right {
     border-left: 14px solid @color-swatch1;
   }
 
-  .widget .extendednavigation li:first-child {
-    border-left: 0;
+  .widget .extendednavigation ul li a:hover {
+    border-bottom: 0;
   }
 
   .widget .extendednavigation li.folder {
     background-image: image('/images/arrow-down-ipad.png')!important;
     background-position: right center;
     background-repeat: no-repeat;
-  }
-
-  .widget .extendednavigation ul li.selected {
-    border-bottom: 2px solid lighten(@color-swatch5,15%);
-  }
-
-  .widget.extendednavigation ul li a:hover {
-    border-bottom: 0;
   }
 
   .widget.extendednavigation ul li:hover {
@@ -1360,11 +1534,11 @@ hr.line.align-right {
     width: 168px;
   }
 
-  /* OTHER */
-
-  .main {
-    padding:20px 0;
+  .main .widget.extendednavigation ul li:hover > ul li {
+    text-align: center;
   }
+
+  /* OTHER */
 
   section.intro {
     display: none;
@@ -1381,8 +1555,8 @@ hr.line.align-right {
   }
 
   .widget.feature h2 {
-    font-size:bkscale(@font-swatch8-font-size, 0.5); /* 25px */
-    line-height:bkscale(@font-swatch8-line-height, 0.8); /* 40px */
+    font-size:bkscale(@font-swatch8-font-size, 0.8); /* 25px */
+    line-height:1.5;
   }
 
   .widget.feature h2 span {
@@ -1402,23 +1576,18 @@ hr.line.align-right {
         height:200px;
   }
 
+  .widget.contactform form, .widget.twitter, .widget.map {
+        padding: 14px;
+    }
+
+  .widget.signupform label {
+        width: 100%;
+        float: left;
+        margin-bottom: 10px;
+    }
+
 }
 
-@media only screen and (max-width : 650px) and (min-width : 481px) {
-   /* Tablet view: 2 tiles */
-   .widget.gallery li {
-      width: 50%;
-      padding-bottom: 50%;
-   }
-}
-
-@media only screen and (max-width : 1050px) and (min-width : 651px) {
-   /* Small desktop / ipad view: 3 tiles */
-   .widget.gallery li {
-      width: 33.3%;
-      padding-bottom: 33.3%;
-   }
-}
 
 /* ===============================
    IPHONE WIDTH
@@ -1594,35 +1763,6 @@ hr.line.align-right {
     text-decoration: none;
   }
 
-  .widget.clicktocall a.justifyleft {
-    text-align: left;
-  }
-
-  .widget.clicktocall a.justifycenter {
-    text-align: center;
-  }
-
-  .widget.clicktocall a.justifyright {
-    text-align: right;
-  }
-
-  .widget.clicktocall a.justifyfull {
-    text-align: justify;
-  }
-
-  .widget.clicktocall a.italic { 
-    font-style: italic;
-  }
-
-  .widget.clicktocall a.bold {
-    font-weight: bold;
-  }
-
-  .widget.clicktocall {
-    padding: 20px 0;
-    display:block;
-  }
-
   /* GALLERY */
 
   .widget.gallery p
@@ -1630,10 +1770,12 @@ hr.line.align-right {
     padding: 10px;
   }
 
-  /* Smartphone view: 1 tile */
-  .widget.gallery li {
-      width: 100%;
-      padding-bottom: 100%;
+  /* GALLERY */
+
+  .widget.gallery ul.gallery-widget li
+  {
+      width: 50%;
+      padding-bottom: 50%;
   }
 }
 
