Updated colour swatches and stylesheet

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1712,11 +1712,13 @@ hr.line.align-right {
   }
 
   .widget.feature h3 {
-    display: none;
+
   }
 
-  .widget.feature button {
-    display: none;
+  .widget.feature .feature-btn button {
+    font-size: .8em;
+    padding: 10px;
+    margin: 0;
   }
 
   /* SLIDESHOW */
