--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1003,6 +1003,7 @@ hr.line.align-right {
 .widget.contactform fieldset input {
     height: 40px;
     width: 100%;
+    padding: 0;
     border: 1px solid lighten(@color-swatch5,10%);
     font-family: @font-swatch5-font-family;
     font-size: @font-swatch5-font-size;
@@ -1020,7 +1021,7 @@ hr.line.align-right {
     font-size: @font-swatch5-font-size;
     color: @font-swatch5-color;
     text-indent: 8px;
-    padding-top: 14px;
+    padding: 14px 0px 0px 0px;
     margin-top: 6px;
     margin-bottom: 20px;
     resize: none;
@@ -1036,12 +1037,14 @@ hr.line.align-right {
     box-shadow: 0px 1px 0px rgba(0, 0, 0, 0.4);
 
     font-family: @font-swatch2-font-family;
-    font-size:.8em;
+    font-size: 1em;
     font-weight:@font-swatch7-font-weight;
     background-color: @color-swatch3;
     color: @color-swatch1;
     text-decoration: none;
     text-shadow: 0 1px 0px rgba(0,0,0,0.3);
+    position: relative;
+    top: -1px;
 }
   
 .widget.contactform fieldset button.btn:hover {
@@ -1632,8 +1635,9 @@ hr.line.align-right {
     font-size: .9em;
   }
 
-  .widget.responsiveslideshow .slideshow-image-list {
-    height:200px;
+  .widget.responsiveslideshow .slideshow-image-list, 
+  .widget.responsiveslideshow .slideshow-widget {
+    height:350px;
   }
 
   .widget.signupform fieldset input {
@@ -1837,6 +1841,11 @@ hr.line.align-right {
     text-decoration: none;
   }
 
+
+   .widget.responsiveslideshow .slideshow-image-list, 
+  .widget.responsiveslideshow .slideshow-widget {
+    height:300px;
+  }
 
   /* GALLERY */
 
