--- a/stylesheet.less
+++ b/stylesheet.less
@@ -186,9 +186,8 @@ footer {
   color: @color-swatch1;
 }
 
-footer h2 {
+footer h1, footer h2, footer h3, footer h4 {
   color: @color-swatch1;
-  font-size:bkscale(@font-swatch2-font-size, 0.9);
   padding-bottom: 20px;
 }
 
@@ -258,13 +257,18 @@ footer span {
 .widget.extendednavigation {
   float: right;
   position: relative;
-  margin-top: 31px;
+  max-width: 700px;
+  margin: 20px 0;
+}
+
+.widget.extendednavigation a.pull {
+  display: none;
 }
 
 .widget.extendednavigation ul {
   float: left;
-  padding: 0;
   margin: 0;
+  padding: 0;
 }
 
 /* ALIGNMENTS */
@@ -286,17 +290,12 @@ footer span {
 .widget.extendednavigation ul li {
   float: left;
   display: block;
-  margin-left: 40px;
-  text-align: left;
-}
-
-.widget.extendednavigation ul li:first-child {
-  margin-left: 0;
+  text-align: left!important;
 }
 
 .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
   display: block;
-  padding: 0;
+  padding: 12px 22px;
   font-family:@font-swatch6-font-family;
   font-size:@font-swatch6-font-size;
   font-weight: @font-swatch6-font-weight;
@@ -306,37 +305,23 @@ footer span {
   text-transform: uppercase;
 }
 
-.widget.extendednavigation ul li a:hover {
+.widget.extendednavigation ul li a:hover, .widget.extendednavigation ul li.folder .text:hover {
   color: @font-swatch6-color-hover;
   text-decoration: none;
-  border-bottom: 2px solid lighten(@color-swatch4,20%);
-  padding-bottom: 4px;
-}
-
-/* SELECTED */
-
-.widget.extendednavigation ul li.selected {
-  border-bottom: 2px solid @color-swatch4;
-  padding-bottom: 4px;
-}
-
-.widget.extendednavigation ul li.selected:hover { 
-  border-bottom: 0;
 }
 
 /* FOLDER */
 
 .widget.extendednavigation ul li.folder {
-  padding-right: 14px;
+  margin-right: 16px;
   background-image: image('/images/arrow-down.png');
   background-position: right center;
   background-repeat: no-repeat;
-  height: 100%;
   cursor: pointer;
 }
 
 .widget.extendednavigation ul li.folder .text:hover {
-  color: lighten(@color-swatch4,20%);
+  color: @color-swatch3;
 }
 
 /* DROPDOWN MENU */
@@ -347,43 +332,41 @@ footer span {
 
 .widget.extendednavigation li:hover > ul {
   display: block;
-  width: 186px;
+  width: 46%;
   position: absolute;
-  background-color: @color-swatch1;
+  background-color: @color-swatch7;
+  /*border: 1px solid lighten(@color-swatch5,35%);*/
+  box-shadow: 5px 5px 0px rgba(110, 110, 110, 0.2);
+  border-top: 0;
   z-index: 500;
-  margin-top: 0;
-  margin-left: -14px;
-  padding-top: 36px;
+  padding: 14px 0;
+  margin: 0;
 }
 
 .widget.extendednavigation li:hover > ul > li {
   display: block;
   width: 100%;
-  text-align: left;
-  margin-left: 0;
-}
-
-.widget.extendednavigation li:hover > ul li:hover {
-  border-bottom: 0;
+  text-align: left!important;
+  padding: 0 30px 0;
+  -webkit-box-sizing: border-box; /* Safari/Chrome, other WebKit */
+  -moz-box-sizing: border-box;    /* Firefox, other Gecko */
+  box-sizing: border-box;         /* Opera/IE 8+ */
 }
 
 .widget.extendednavigation li:hover > ul > li > a {
   display: block;
-  background-image: none;
   color: @color-swatch5;
-  padding: 14px;
-  margin-left: 0;
+  padding: 0;
 }
 
-.widget.extendednavigation li:hover > ul > li > a {
-  border-bottom: 0;
+
+.widget.extendednavigation ul li:hover > ul li .text {
+  padding: 0;
+  background-image: image('/images/arrow-left.png');
+  background-position: left center;
+  background-repeat: no-repeat;
 }
 
-.widget.extendednavigation li:hover > ul li .text:hover {
-  border-bottom: 0;
-  padding-bottom: 0;
-  color: @color-swatch3;
-}
 
 /* EXTENDED NAVIGATION - INSIDE ZONE */
 
@@ -1564,77 +1547,78 @@ hr.line.align-right {
   .widget.extendednavigation {
     width: 100%;
     padding: 0;
-    margin-top: 0;
+    margin: 0;
   }
+
   .widget .extendednavigation {
-    display: table;
-    *display: block;
-    *float: left;
+    display: block;
+    float: left;
     width: 100%;
   }
 
-  .widget .extendednavigation ul {
-    display: table-row;
+  /* NAV ICON */
+
+  .widget .extendednavigation a.pull {
+    display: block;
     width: 100%;
-    float: none!important;
-    text-align: center;
+    position: absolute;
+    top: -5px;
   }
 
-  .widget .extendednavigation li {
-    display: table-cell !important;
-    float: none!important;
-    padding: 0.6em;
-    background-color: lighten(@color-swatch5,17%);
-    border-left: 14px solid @color-swatch1;
+    .widget .extendednavigation a.pull:after {
+    content:"";
+    background: image('/images/nav-icon.png') no-repeat;
+    width: 30px;
+    height: 30px;
+    display: inline-block;
+    position: absolute;
+    right: 15px;
+    top: -48px;
   }
 
-  .widget .extendednavigation li:first-child {
-    border-left: 0;
-  }
+    /* NAV */
 
-  .widget .extendednavigation li.folder {
-    background-image: image('/images/arrow-down-ipad.png')!important;
-    background-position: right center;
-    background-repeat: no-repeat;
-  }
+    .widget .extendednavigation ul {
+        width: 100%;
+        display: none;
+        border-top: 1px solid lighten(@color-swatch5,20%);
+        padding: 20px 0; 
+    }
 
-  .widget .extendednavigation ul li.selected {
-    border-bottom: 2px solid lighten(@color-swatch5,15%);
-  }
+    .widget .extendednavigation li {
+        width: 100%;
+        padding: 0;
+    }
 
-  .widget.extendednavigation ul li a:hover {
-    border-bottom: 0;
-  }
+    .widget.extendednavigation ul li a, .widget.extendednavigation ul li.folder .text {
+        padding: 12px 0;
+    }
 
-  .widget.extendednavigation ul li:hover {
-    padding-bottom: 0;
-    background-color: lighten(@color-swatch5,18%);
-  }
+    .widget.extendednavigation ul li > ul {
+        display: none!important;
+    }
 
-  .widget.extendednavigation ul li:hover > ul {
-    width: 164px;
-    margin-left: -9px;
-    padding-top: 10px;
-    background-color: lighten(@color-swatch5,18%);
-  }
+    .widget.extendednavigation ul li:hover > ul {
+        display: block!important;
+        width: 100%;
+        border: 1px solid lighten(@color-swatch3,35%);
+    }
 
-  .widget.extendednavigation li:hover > ul li {
-    display: block!important;
-    border: 0!important;
-    padding: .1em 0;
-  }
+    .widget.extendednavigation ul li:hover > ul li {
+        padding: 10px 30px;
+    }
 
-  .widget.extendednavigation li:hover > ul > li > a {
-    padding: 10px;
-  }
+    .widget.extendednavigation ul li:hover > ul li .text, .widget.extendednavigation ul li:hover > ul li.folder .text {
+        background-image: image('/images/arrow-left-gr.png');
+        background-position: left center;
+        background-repeat: no-repeat;
+    }
 
-  .widget.extendednavigation ul.align-right li.folder {
-    padding-right: 26px;
-  }
+    /* EXTENDED NAVIGATION - INSIDE ZONE */
 
-  .widget.extendednavigation ul.align-right li:hover ul {
-    width: 168px;
-  }
+    .main .widget.extendednavigation ul {
+        display: block;
+    }
 
   /* OTHER */
 
@@ -1711,90 +1695,6 @@ hr.line.align-right {
 
   .widget.companyheader .company-name h1 {
     font-size:bkscale(@font-swatch1-font-size, 0.6)
-  }
-
-  /* NAV */
-
-  .widget.extendednavigation {
-    width: 100%;
-  }
-  .widget .extendednavigation {
-    display: block;
-    width: 100%;
-  }
-
-  .widget .extendednavigation ul {
-    display: block;
-    width: 100%;
-    float: left;
-    margin: 0;
-  }
-
-  .widget .extendednavigation ul li {
-    display: block!important;
-    width: 100%;
-    border-left: 0;
-    padding: 0;
-    margin-left: 0;
-    margin-bottom: 10px;
-  }
-
-  .widget .extendednavigation ul li.selected {
-    padding-bottom: 0;
-  }
-
-  .widget .extendednavigation ul li.selected:hover {
-    border-bottom: 2px solid lighten(@color-swatch5,15%);
-  }
-
-  .widget .extendednavigation li:hover {
-    background-color: darken(@color-swatch2,3%);
-  }
-
-  .widget.extendednavigation ul li.folder {
-    padding: 0;
-  }
-
-  .widget .extendednavigation ul li a {
-    border-left: 0;
-    border-right: 0;
-    padding: 1.4em 1em;
-  }
-
-  .widget.extendednavigation ul li a:hover {
-    padding: 1.4em 1em;
-  }
-
-  .widget.extendednavigation ul li.folder .text {
-    padding: 1.4em 1em;
-    margin-left: 0;
-  }
-
-  .widget .extendednavigation ul li:last-child {
-    border: 0;
-  }
-
-  .widget.extendednavigation li:hover > ul {
-    width: 100%!important;
-    margin-left: 0!important;
-    margin-top: 0px;
-    padding-top: 0!important;
-    border-top: 2px solid @color-swatch2;
-  }
-
-  .widget.extendednavigation li:hover > ul li {
-    display: block!important;
-    margin-bottom: 0;
-    padding: 0;
-    text-align: center;
-  }
-
-  .widget.extendednavigation li:hover > ul > li > a {
-    padding: 0;
-  }
-
-  .widget.extendednavigation li:hover > ul li .text:hover {
-    padding: 1.4em 1em;
   }
 
   /* UL ALIGN RIGHT */
