Added view nav icon CSS

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -114,6 +114,10 @@ blockquote:before {
   padding: 40px 0;
 }
 
+body.edit .widget.navigation, body.edit .widget.extendednavigation {
+    overflow: visible;
+}
+
 /* DEAFULT PAGE TYPES */
 
 .bk-pt-default header {
