--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1124,7 +1124,8 @@ hr.line.align-right {
 
 .widget.socialicons a, .widget.profile .bk-profile-socialicons a {
     text-decoration: none;
-    text-indent: -9999px;
+    text-indent: 9999px;
+    white-space: nowrap;
 }
 
 .widget.profile .bk-profile-socialicons span {
