--- a/stylesheet.less
+++ b/stylesheet.less
@@ -820,7 +820,8 @@ footer span {
     bottom: 0px;
     left: 0px;
     right: 0px;
-    margin-bottom: -50px;
+    margin-bottom: -310px;
+    max-height: 284px;
     background:@color-swatch1;
     background: rgba(0, 0, 0, 0.5);
     padding: 10px;
@@ -851,6 +852,20 @@ footer span {
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+/* Lightbox */
+
+.lb-data .lb-caption, .lb-data .lb-number {
+  font-family:@font-swatch5-font-family;
+  font-size:@font-swatch5-font-size;
+  font-weight: @font-swatch5-font-weight;
+  line-height:@font-swatch5-line-height;
+  color:lighten(@font-swatch5-color,50%);
+}
+
+.lb-data .lb-number {
+  font-size:bkscale(@font-swatch5-font-size,0.9);
 }
 
 /* ===============================
@@ -1668,6 +1683,14 @@ hr.line.align-right {
     width: 52%;
   }
 
+   /* GALLERY */
+
+  .widget.gallery li span.inner .title, .widget.gallery li span.inner .description {
+    max-height: 220px;
+    font-size:bkscale(@font-swatch5-font-size,0.9);
+    line-height:bkscale(@font-swatch5-line-height,0.9);
+  }
+
 }
 
 @media only screen and (max-width : 650px) and (min-width : 481px) {
@@ -1787,7 +1810,12 @@ hr.line.align-right {
     height:300px;
   }
 
-  /* GALLERY */
+  
+   /* GALLERY */
+
+  .widget.gallery li span.inner .title, .widget.gallery li span.inner .description {
+    max-height: 150px;
+  }
 
   .widget.gallery p
   {
