Reduce the margin of the :hover > ul in the drop down of the nav widget

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1717,6 +1717,7 @@ hr.line.align-right {
     }
 
     .widget.extendednavigation ul li:hover > ul {
+        margin:14px 0 0 0;
         display: block!important;
         width: 100%;
         border: 1px solid lighten(@color-swatch3,35%);
