Navigation overlay fix

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -304,6 +304,7 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 
       @media @tablet {
         padding-right: 50px;
+        float: left;
       }
 
       .widget.companyname {
@@ -422,7 +423,8 @@ body.edit .widget.navigation, body.edit .widget.extendednavigation {
 }
 
 .widget.extendednavigation a.pull {
-  top:-58px;
+  top: 0;
+  margin-top: 16px;
 }
 
 .widget.extendednavigation ul {
@@ -1743,15 +1745,11 @@ hr.line.align-right {
   /* NAV */
 
   .widget.extendednavigation {
-    width: 100%;
-    padding: 0;
-    margin: 0;
+   
   }
 
   .widget .extendednavigation {
-    display: block;
-    float: left;
-    width: 100%;
+    
 }
 
     /* NAV */
